--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,9 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "vendor/mqtt.min.js"
+            ]
           },
           "configurations": {
             "local": {
