--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mqtt-controller",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~11.1.1",
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
+    "bootstrap": "^5.0.0-beta1",
     "mqtt": "^4.2.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
