chore(frontend): Moved into frontend-folder for use in mono-repo
- Moved files into folder
- Updated Github actions

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -10,6 +10,9 @@ on:
 
 jobs:
   analyze:
+    defaults:
+      run:
+        working-directory: /frontend/
     name: Analyze
     runs-on: ubuntu-latest
 
