chore(frontend): Updated dependencies and ngx-uptodate action
- ng update & npm update
- ngx-uptodate should use v1.1.0, see https://github.com/tinesoft/ngx-uptodate/issues/16

--- a/.github/workflows/ngx-uptodate.yml
+++ b/.github/workflows/ngx-uptodate.yml
@@ -11,7 +11,7 @@ jobs:
         working-directory: /frontend/
     steps:
       - name: Updating ng dependencies
-        uses: tinesoft/ngx-uptodate@master
+        uses: tinesoft/ngx-uptodate@v1.1.0
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           pr-branch-prefix: chore/ng-update/
