--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,30 +12,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.6",
-    "@angular/common": "~11.2.6",
-    "@angular/compiler": "~11.2.6",
-    "@angular/core": "~11.2.6",
-    "@angular/forms": "~11.2.6",
-    "@angular/platform-browser": "~11.2.6",
-    "@angular/platform-browser-dynamic": "~11.2.6",
-    "@angular/router": "~11.2.6",
-    "bootstrap": "^5.0.0-beta2",
+    "@angular/animations": "^11.2.7",
+    "@angular/common": "^11.2.7",
+    "@angular/compiler": "^11.2.7",
+    "@angular/core": "^11.2.7",
+    "@angular/forms": "^11.2.7",
+    "@angular/platform-browser": "^11.2.7",
+    "@angular/platform-browser-dynamic": "^11.2.7",
+    "@angular/router": "^11.2.7",
+    "bootstrap": "^5.0.0-beta3",
     "mqtt": "^4.2.6",
     "rxjs": "~6.6.6",
     "tslib": "^2.0.0",
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.5",
-    "@angular/cli": "~11.2.5",
-    "@angular/compiler-cli": "~11.2.6",
-    "@types/jasmine": "^3.6.7",
-    "@types/node": "^14.14.35",
+    "@angular-devkit/build-angular": "^0.1102.6",
+    "@angular/cli": "^11.2.6",
+    "@angular/compiler-cli": "^11.2.7",
+    "@types/jasmine": "^3.6.9",
+    "@types/node": "^14.14.37",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~6.0.0",
-    "karma": "^6.2.0",
+    "karma": "^6.3.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
