--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,14 +27,14 @@
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.10",
-    "@angular/cli": "^11.2.10",
+    "@angular-devkit/build-angular": "^0.1102.11",
+    "@angular/cli": "^11.2.11",
     "@angular/compiler-cli": "^11.2.10",
     "@types/jasmine": "^3.6.9",
-    "@types/node": "^14.14.37",
+    "@types/node": "^15.0.2",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~6.0.0",
+    "jasmine-core": "~3.7.1",
+    "jasmine-spec-reporter": "~7.0.0",
     "karma": "^6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
@@ -43,6 +43,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~9.1.1",
     "tslint": "~6.1.0",
-    "typescript": "^4.1.5"
+    "typescript": "~4.1.0"
   }
 }
